--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -16,6 +16,13 @@ jobs:
         uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
         with:
           arguments: test
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()    # run this step even if previous step failed
+        with:
+          name: JEST Tests            # Name of the check run which will be created
+          path: reports/jest-*.xml    # Path to test results
+          reporter: jest-junit        # Format of test results
   build:
     name: Gradlew Build
     runs-on: ubuntu-latest
