--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -20,9 +20,9 @@ jobs:
         uses: dorny/test-reporter@v1
         if: success() || failure()    # run this step even if previous step failed
         with:
-          name: JEST Tests            # Name of the check run which will be created
-          path: reports/jest-*.xml    # Path to test results
-          reporter: jest-junit        # Format of test results
+          name: JUnit Tests            # Name of the check run which will be created
+          path: build/test-results/test/TEST-*.xml
+          reporter: java-junit        # Format of test results
   build:
     name: Gradlew Build
     runs-on: ubuntu-latest
